--- a/src/Plugins/SmartStore.AmazonPay/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.AmazonPay/Localization/resources.en-us.xml
@@ -66,7 +66,7 @@ Text suggestions:<ul>
 		<Value>Use Sandbox</Value>
 	</LocaleResource>
 	<LocaleResource Name="UseSandbox.Hint">
-		<Value>Check to use the sandbox (testing environment).</Value>
+		<Value>Check the box to use the sandbox (testing environment).</Value>
 	</LocaleResource>
 	<LocaleResource Name="SellerId">
 		<Value>Your Merchant ID</Value>
