--- a/src/Plugins/SmartStore.ShippingByWeight/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.ShippingByWeight/Localization/resources.en-us.xml
@@ -36,7 +36,7 @@
     <Value>Use percentage</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.UsePercentage.Hint">
-    <Value>Check to use 'charge percentage' value.</Value>
+    <Value>Check the box to use 'charge percentage' value.</Value>
   </LocaleResource>
   <LocaleResource Name="Fields.ShippingChargePercentage">
     <Value>Charge percentage (of subtotal)</Value>
