--- a/src/Plugins/SmartStore.Shipping/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.Shipping/Localization/resources.en-us.xml
@@ -36,7 +36,7 @@
         <Value>Zip-(Range)</Value>
       </LocaleResource>
       <LocaleResource Name="Fields.Zip.Hint">
-        <Value>Zip/postal code (range), either as specific value or range pattern (e.g. 4000-4999). You can also define wildcard chars like * or ?. If zip is empty, then this shipping rate will apply to all customers from the given country or state / province, regardless of the zip code.</Value>
+        <Value>Zip/postal code (range), either as specific values (comma devided) or range pattern (e.g. 4000-4999). You can also define wildcard chars like * or ?. If zip is empty, then this shipping rate will apply to all customers from the given country or state / province, regardless of the zip code. You can also enter multiple ranges (comma devided)</Value>
       </LocaleResource>
       <LocaleResource Name="Fields.ShippingMethod">
         <Value>Shipping method</Value>
