--- a/src/Plugins/SmartStore.OfflinePayment/Localization/resources.en-us.xml
+++ b/src/Plugins/SmartStore.OfflinePayment/Localization/resources.en-us.xml
@@ -54,7 +54,7 @@
       <LocaleResource Name="PaymentInfoDescription">
         <Value>
           <![CDATA[
-            Once your order is placed, you will be contacted by our stuff to confirm the order.
+            Once your order is placed, you will be contacted by our staff to confirm the order.
           ]]>
         </Value>
       </LocaleResource>
