Getting started to convert GMC plugin to support new export framework

--- a/src/Plugins/SmartStore.GoogleMerchantCenter/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/Localization/resources.de-de.xml
@@ -2,7 +2,17 @@
   <LocaleResource Name="Plugins.FriendlyName.SmartStore.GoogleMerchantCenter" AppendRootKey="false">
     <Value>Google Merchant Center (GMC) Feed</Value>
   </LocaleResource>
-	<LocaleResource Name="AdminInstruction">
+  <LocaleResource Name="Plugins.Description.SmartStore.GoogleMerchantCenter" AppendRootKey="false">
+    <Value>Ermöglicht den Export von Produktdaten im Feed-Format von Google Merchant Center (GMC).</Value>
+  </LocaleResource>
+  <LocaleResource Name="Plugins.FriendlyName.Feeds.GoogleMerchantCenterProductXml" AppendRootKey="false">
+    <Value>Google Merchant Center (GMC) XML Feed</Value>
+  </LocaleResource>
+  <LocaleResource Name="Plugins.Description.Feeds.GoogleMerchantCenterProductXml" AppendRootKey="false">
+    <Value>Ermöglicht den Export von Produktdaten im XML Feed-Format von Google Merchant Center (GMC).</Value>
+  </LocaleResource>
+
+  <LocaleResource Name="AdminInstruction">
 		<Value>
 			<![CDATA[<ul>
 <li>Für die Produktidentifizierung muss entweder die GTIN (z.B. als UPC, EAN etc.) oder der Hersteller samt Hersteller-Artikelnummer (MPN) hinterlegt sein. Google empfiehlt die Angabe aller drei Informationen.</li>
