--- a/src/Plugins/SmartStore.GoogleMerchantCenter/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/Localization/resources.de-de.xml
@@ -18,14 +18,10 @@
 <li>Für die Produktidentifizierung muss entweder die GTIN (z.B. als UPC, EAN etc.) oder der Hersteller samt Hersteller-Artikelnummer (MPN) hinterlegt sein. Google empfiehlt die Angabe aller drei Informationen.</li>
 <li>Standard Steuer- und Versanddaten sind in den Einstellungen Ihres Google-Merchant-Center-Kontos zu hinterlegen.</li>
 <li>Mehr Informationen zu benötigten Feldern finden Sie im Artikel <a href="http://support.google.com/merchants/bin/answer.py?hl=de&answer=188494" target="_blank">Produkt-Feed-Spezifikationen</a>.</li>
+<li>Eine Liste mit allen gültigen Google-Produkt-Kategorie finden Sie <a href="http://support.google.com/merchants/bin/answer.py?hl=de&answer=160081" target="_blank">hier</a>.</li>
 </ul>]]>
 		</Value>
 	</LocaleResource>
-	<LocaleResource Name="GridEditNote">
-		<Value>
-			<![CDATA[Eine Liste mit allen gültigen Google-Produkt-Kategorie finden Sie <a href="http://support.google.com/merchants/bin/answer.py?hl=de&answer=160081" target="_blank">hier</a>.]]>
-		</Value>
-	</LocaleResource>	
 	<LocaleResource Name="MissingDefaultCategory">
 		<Value>Standard-Google-Kategorie fehlt</Value>
 	</LocaleResource>
@@ -35,12 +31,6 @@
 	<LocaleResource Name="DefaultGoogleCategory.Hint">
 		<Value>Wird verwendet, falls auf Produktebene keine Kategorie angegeben ist.</Value>
 	</LocaleResource>
-	<LocaleResource Name="General">
-		<Value>Allgemein</Value>
-	</LocaleResource>
-	<LocaleResource Name="ProductData">
-		<Value>Produktspezifische Daten</Value>
-	</LocaleResource>	
 	<LocaleResource Name="Products.ProductName">
 		<Value>Produkt</Value>
 	</LocaleResource>
