Testing Google Merchant Center feed plugin

--- a/src/Plugins/SmartStore.GoogleMerchantCenter/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/Localization/resources.de-de.xml
@@ -1,12 +1,12 @@
 ﻿<Language Name="Deutsch" IsDefault="true" IsRightToLeft="false">
   <LocaleResource Name="Plugins.FriendlyName.SmartStore.GoogleMerchantCenter" AppendRootKey="false">
-    <Value>Google Merchant Center (GMC) Feed</Value>
+    <Value>Google Merchant Center Feed</Value>
   </LocaleResource>
   <LocaleResource Name="Plugins.Description.SmartStore.GoogleMerchantCenter" AppendRootKey="false">
     <Value>Ermöglicht den Export von Produktdaten im Feed-Format von Google Merchant Center (GMC).</Value>
   </LocaleResource>
   <LocaleResource Name="Plugins.FriendlyName.Feeds.GoogleMerchantCenterProductXml" AppendRootKey="false">
-    <Value>Google Merchant Center (GMC) XML Feed</Value>
+    <Value>Google Merchant Center XML Feed</Value>
   </LocaleResource>
   <LocaleResource Name="Plugins.Description.Feeds.GoogleMerchantCenterProductXml" AppendRootKey="false">
     <Value>Ermöglicht den Export von Produktdaten im XML Feed-Format von Google Merchant Center (GMC).</Value>
