--- a/src/Plugins/SmartStore.GoogleAnalytics/Localization/resources.de-de.xml
+++ b/src/Plugins/SmartStore.GoogleAnalytics/Localization/resources.de-de.xml
@@ -1,5 +1,5 @@
 ﻿<Language Name="Deutsch" IsDefault="true" IsRightToLeft="false">
-  <LocaleResource Name="Plugins.FriendlyName.Widgets.GoogleAnalytics" AppendRootKey="false">
+  <LocaleResource Name="Plugins.FriendlyName.SmartStore.GoogleAnalytics" AppendRootKey="false">
     <Value>Google Analytics</Value>
   </LocaleResource>
   <LocaleResource Name="AdminInstruction">
